added image gallery and info page

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,11 @@ a {
 	border-bottom: 1px solid #5f098f;
 }
 
+.active {
+	color: #7a7294;
+	border-bottom: 1px solid #7a7294;
+}
+
 
 /*	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=
 				Gallery
@@ -116,6 +121,34 @@ a {
 	width: 350px;
 }
 
+
+/*	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=
+				About
+=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	*/
+
+.aboutItem {
+	width: 90%;
+	height: 400px;
+	background-color: rgba(255, 255, 255, 0.3);
+	float: left;
+
+	margin: 5px 5% 10px 0;
+
+
+	-webkit-box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.55);
+	   -moz-box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.55);
+		    box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.55);
+}
+
+
+.aboutItem h3 {
+	padding: 8px 0 0 10px;
+}
+
+.aboutText {
+	padding: 2px 10px 0 10px;
+	text-align: left;
+}
 
 /*	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=	=
 				Footer
